# RiskPy

./: .flake8  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  board.py  classicboard.txt  continent.py  dice.py  game.py  main.py  player.py  pyproject.toml  random_player.py  requirements.txt  territory.py
.github/: pull_request_template.md
.github/workflows/: black.yml  conventional-pr-title.yml  flake8.yml
src/: board.py  dice.py  game.py  main.py  player.py  random_player.py  territory.py  util.py
