[tool.poetry]
name = "riskpy"
version = "0.1.0"
description = "Risk, the original strategy board game, implemented in Python 3.10"
authors = ["Mouwrice <mauricevanwassenhove@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
autopep8 = "^1.7.0"
flake8 = "^5.0.4"
pre-commit = "^3.2.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
